# dithord

./: Cargo.toml  LICENSE-APACHE  README.md  main.rs
src/: lib.rs  ordered_dither.rs  threshold_map.rs
