[package]
name = "dithord"
description = "Provides capabilities for monochromatic Bayer ordered dithering on images."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
keywords = ["image-processing", "dither"]
repository = "https://github.com/exvacuum/dithord"

[dependencies]
image = "0.24.7"

[dev-dependencies]
rstest = "0.18.2"
